--- a/src/Components/Space/Space.css
+++ b/src/Components/Space/Space.css
@@ -1,4 +1,4 @@
-.Space {
+.space {
   width: 100%;
   min-height: 100vh;
   background: linear-gradient(rgba(8, 0, 58, 0.5), rgba(8, 0, 58, 0.5)),
@@ -6,4 +6,23 @@
   background-size: cover;
   background-position: center;
   color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.space-text {
+  text-align: center;
+  max-width: 800px;
+}
+
+.space-text h1 {
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.space-text p {
+  max-width: 700px;
+  margin: 10px auto 20px;
+  line-height: 1.4;
 }
