--- a/src/index.css
+++ b/src/index.css
@@ -28,4 +28,12 @@ a {
   padding: 14px 25px;
   border-radius: 30px;
   font-size: 16px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn img {
+  width: 20px;
+  margin-left: 10px;
 }
