--- a/src/Components/Space/Space.css
+++ b/src/Components/Space/Space.css
@@ -21,8 +21,16 @@
   font-weight: 600;
 }
 
-.space-text p {
-  max-width: 700px;
-  margin: 10px auto 20px;
-  line-height: 1.4;
+.space-text h2 {
+  font-size: 25px;
+  font-weight: 300;
+}
+.space-text h3 {
+  font-size: 40px;
+  font-weight: 600;
+}
+
+.btn{
+  margin: 10px 10px;
+  padding: 10px 20px;
 }
