--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -19,27 +19,19 @@
   border-radius: 10px;
 }
 
-.play-icon {
-  width: 60px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 .about-right h3 {
   font-weight: 600;
   font-weight: 16px;
-  color: #212ea0;
+  color: white;
 }
 .about-right h2 {
   font-size: 35px;
-  color: #000f38;
+  color: white;
   margin: 10px 0;
   max-width: 400px;
 }
 
 .about p {
-  color: #676767;
+  color: white;
   margin-bottom: 15px;
 }
